--- a/package.json
+++ b/package.json
@@ -37,6 +37,12 @@
     "ember-export-application-global": "^1.0.4",
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.0"
+    "loader.js": "^4.0.0",
+    "ember-cli-coffeescript": "1.13.2"
+  },
+  "dependencies": {
+    "ember-cli-babel": "^5.1.5",
+    "ember-cli-coffeescript": "^1.14.0",
+    "ember-cli-htmlbars": "^1.0.11"
   }
 }
