--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "ember-cli": "2.3.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
+    "ember-cli-bootstrap": "0.0.15",
+    "ember-cli-coffeescript": "1.13.2",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
@@ -37,8 +39,7 @@
     "ember-export-application-global": "^1.0.4",
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
-    "loader.js": "^4.0.0",
-    "ember-cli-coffeescript": "1.13.2"
+    "loader.js": "^4.0.0"
   },
   "dependencies": {
     "ember-cli-babel": "^5.1.5",
